--- a/source_code/app/src/main/AndroidManifest.xml
+++ b/source_code/app/src/main/AndroidManifest.xml
@@ -9,11 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GamePlayActivity"
-            android:theme="@style/AppTheme.noActionBar"></activity>
-        <activity android:name=".MainMenuActivity"
-            android:theme="@style/AppTheme.noActionBar"></activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".GameOverActivity"
+            android:theme="@style/AppTheme.noActionBar" />
+        <activity
+            android:name=".GamePlayActivity"
+            android:theme="@style/AppTheme.noActionBar" />
+        <activity
+            android:name=".MainMenuActivity"
+            android:theme="@style/AppTheme.noActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme.noActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
